# highloadcup2021

./: .gitignore  CMakeLists.txt  README.md  grafana.json  sync.sh
app/: CMakeLists.txt  Dockerfile  Dockerfile-build  build.sh  coords.txt  dump.sh  profile.sh  push.sh  run.sh  server-dump.sh  server-profile.sh  server-runner.sh  test.sh
app/src/: api.cpp  api.h  api_entities.h  app.cpp  app.h  const.cpp  const.h  error.h  http_client.cpp  http_client.h  json.cpp  json.h  log.cpp  log.h  main.cpp  rate_limiter.cpp  state.cpp  state.h  stats.cpp  stats.h  sys.cpp  sys.h  util.cpp  util.h
app/src/lib/: api.cpp  api.h  api_entities.h  app.cpp  app.h  error.cpp  error.h  http_client.cpp  json.cpp  json.h  log.cpp  log.h  rate_limiter.h  state.h  stats.cpp  stats.h  util.h
app/src/test/: state_test.cpp
go/charts/: go.sum  main.go
go/explore-brute-force/: best.txt  main.go
go/exploreExpectedValue/: .gitignore  main.go  results.txt
